--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -143,11 +143,13 @@
                     beforeSend: function () {
                         console.log('Prepared');
                     },
-                    success: (data, result, resultDesp,XMLResponse) => {
+                    success: (data, result, XMLResponse) => {
                         console.log(result);
                         console.log(data);
                         if (result === 1000||result==='success') {
                             console.log(123);
+                            console.log(XMLResponse.getResponseHeader('token'));
+                            //window.location.href="mainPage.html"
                         }else if(result===4001){
                             this.$alert('账号或密码错误');
                             this.isLogging=false;
