--- a/BR-MS/mainPage.html
+++ b/BR-MS/mainPage.html
@@ -133,7 +133,7 @@
             <img src="res/user-avatar.png">
             <div>
                 <span class="user-name">{{user.name}}</span>
-                <el-tag>{{roleText}}</el-tag>
+                <el-tag type="primary">{{roleText}}</el-tag>
             </div>
         </div>
     </header>
