--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -110,7 +110,9 @@
 <script src="lib/vue.js"></script>
 <script src="lib/jquery.min.js"></script>
 <script src="lib/eleme-index.js"></script>
+<script src="res/dependencies.js"></script>
 <script>
+    var urlPrefix=require('/mods/backend').url;
     var app = new Vue({
         el: '#app',
         data: function () {
@@ -134,7 +136,7 @@
             loginPost: function(){
                 $.ajax({
                     type: 'post',
-                    url: 'http://10.112.128.63:8080/dispatch/login',
+                    url: urlPrefix+'/login',
                     headers:{'Content-Type':'application/json'},
                     data: JSON.stringify({
                         "username": this.loginForm.username,
@@ -143,17 +145,19 @@
                     beforeSend: function () {
                         console.log('Prepared');
                     },
-                    success: (data, result,XMLResponse) => {
-                        console.log(result);
+                    success: (data,result,XMLResponse) => {
+                        console.log(data.result);
                         console.log(data);
-                        if (result === 1000||result==='success') {
-                            console.log(123);
-                            console.log(XMLResponse.getResponseHeader('token'));
-                            //window.location.href="mainPage.html"
-                        }else if(result===4001){
+                        if (data.result === 1000) {
+                            var token=XMLResponse.getResponseHeader('token');
+                            localStorage.setItem('token',token);
+                            localStorage.setItem('realName',data.data.realName);
+                            localStorage.setItem('role',data.data.role);
+                            window.location.href="mainPage.html";
+                        }else if(data.result===4001){
                             this.$alert('账号或密码错误');
                             this.isLogging=false;
-                        }else if(result===4002){
+                        }else if(data.result===4002){
                             this.$alert('登录失败');
                             this.isLogging=false;
                         } else {
