--- a/BR-MS/UserAuth.html
+++ b/BR-MS/UserAuth.html
@@ -19,15 +19,22 @@
             margin-bottom: 0;
             width: 50%;
         }
-        #search .el-input{
-            width:180px;
+
+        #search .el-input {
+            width: 180px;
+        }
+
+        span.no-wrap {
+            white-space: nowrap;
         }
     </style>
 </head>
 <body>
 
 <div id="userAuth">
-    <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams" v-loading.fullscreen="initializing" element-loading-text="正在获取数据" element-loading-background="rgba(0,0,0,0.7)">
+    <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams"
+             v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
+             element-loading-background="rgba(0,0,0,0.7)">
         <el-form-item label="用户名" v-model="queryParams.username">
             <el-input></el-input>
         </el-form-item>
@@ -76,8 +83,10 @@
         <el-table-column prop="companyName" label="单位名称" width="225px"></el-table-column>
         <el-table-column label="操作">
             <template slot-scope="props">
-                <el-button type="success" size="mini" @click="()=>{agree(props.row)}">同意</el-button>
-                <el-button type="danger" size="mini" @click="()=>{reject(props.row)}">拒绝</el-button>
+                <span class="no-wrap">
+                    <el-button type="success" size="mini" @click="()=>{agree(props.row)}">同意</el-button>
+                    <el-button type="danger" size="mini" @click="()=>{reject(props.row)}">拒绝</el-button>
+                </span>
             </template>
         </el-table-column>
     </el-table>
@@ -125,7 +134,7 @@
 
             return {
                 results: [item1, item2],
-                initializing:true,
+                initializing: true,
                 queryParams: {
                     usertype: '',
                     username: '',
@@ -135,27 +144,27 @@
                 }
             }
         },
-        mounted:function(){
+        mounted: function () {
             //从后端拉取数据
             $.ajax({
-                type:'get',
-                url:'http://10.112.128.63:8080/dispatch/user/toauth',
-                success:(data,result,resultDesp)=>{
+                type: 'get',
+                url: 'http://10.112.128.63:8080/dispatch/user/toauth',
+                success: (data, result, resultDesp) => {
                     if (result === 1000 || result === 'success') {
                         console.log(data);
                         console.log(result);
                         console.log(resultDesp);
-                        this.initializing=false;
+                        this.initializing = false;
                     } else {
                         this.$alert('数据拉取失败');
                     }
-                    this.initializing=false;
+                    this.initializing = false;
                 },
-                error:(result,resultDesp)=>{
+                error: (result, resultDesp) => {
                     console.log(result);
                     console.log(resultDesp);
                     this.$alert('数据拉取失败');
-                    this.initializing=false;
+                    this.initializing = false;
                 }
             })
         },
@@ -165,7 +174,7 @@
                     type: 'post',
                     url: APIs[0],
                     data: {},
-                    success: ()=>{
+                    success: () => {
                         this.$alert(`已同意${row.realName}的请求`);
                     },
                     error: function () {
@@ -179,7 +188,7 @@
                     type: 'post',
                     url: APIs[1],
                     data: {},
-                    success:()=>{
+                    success: () => {
                         this.$alert(`已拒绝${row.realName}的请求`)
                     },
                     error: function () {
