--- a/BR-MS/UserQuery.html
+++ b/BR-MS/UserQuery.html
@@ -19,15 +19,22 @@
             margin-bottom: 0;
             width: 50%;
         }
-        #search .el-input{
-            width:180px;
+
+        #search .el-input {
+            width: 180px;
+        }
+
+        span.no-wrap {
+            white-space: nowrap;
         }
     </style>
 </head>
 <body>
 
 <div id="userAuth">
-    <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams" v-loading.fullscreen="initializing" element-loading-text="正在获取数据" element-loading-background="rgba(0,0,0,0.7)">
+    <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams"
+             v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
+             element-loading-background="rgba(0,0,0,0.7)">
         <el-form-item label="用户名" v-model="queryParams.username">
             <el-input></el-input>
         </el-form-item>
@@ -102,12 +109,16 @@
                     editedForm.email=props.row.email;
                     editedForm.address=props.row.address;
                     editedForm.employeeId=props.row.employeeId;
-                }">修改信息</el-button>
+                }">修改信息
+                </el-button>
                 <el-button type="danger" size="mini" @click="()=>{deleteUser(props.row)}">删除用户</el-button>
-                <el-dialog :visible.sync="props.row.dialogVisible" v-loading.fullscreen="loading" element-loading-text="正在提交" element-loading-background="rgba(0,0,0,0.7)">
-                    <el-form ref="editedForm" label-position="right" label-width="120px" :rules="editRule" :model="editedForm">
+                <el-dialog :visible.sync="props.row.dialogVisible" v-loading.fullscreen="loading"
+                           element-loading-text="正在提交" element-loading-background="rgba(0,0,0,0.7)">
+                    <el-form ref="editedForm" label-position="right" label-width="120px" :rules="editRule"
+                             :model="editedForm">
                         <el-form-item label="用户名" prop="username">
-                            <el-input v-model="editedForm.username" :value="props.row.username" :disabled="true"></el-input>
+                            <el-input v-model="editedForm.username" :value="props.row.username"
+                                      :disabled="true"></el-input>
                         </el-form-item>
                         <el-form-item label="用户类型" prop="role" required>
                             <el-select v-model="editedForm.role">
@@ -128,7 +139,8 @@
                             <el-input v-model="editedForm.title" :value="props.row.title" required></el-input>
                         </el-form-item>
                         <el-form-item label="手机号码" prop="phoneNumber">
-                            <el-input v-model="editedForm.phoneNumber" :value="props.row.phoneNumber" required></el-input>
+                            <el-input v-model="editedForm.phoneNumber" :value="props.row.phoneNumber"
+                                      required></el-input>
                         </el-form-item>
                         <el-form-item label="固定电话">
                             <el-input v-model="editedForm.tel" :value="props.row.tel"></el-input>
@@ -140,10 +152,12 @@
                             <el-input v-model="editedForm.address" :value="props.row.address"></el-input>
                         </el-form-item>
 
-                            <p style="text-align: right">
+                        <p style="text-align: right">
+                            <span class="no-wrap">
                                 <el-button type="primary" @click="confirmEdition('editedForm')">修改</el-button>
                                 <el-button @click="props.row.dialogVisible=false">取消</el-button>
-                            </p>
+                            </span>
+                        </p>
                         </el-form-item>
                     </el-form>
                 </el-dialog>
@@ -174,7 +188,7 @@
                 tel: '010-66666666',
                 email: 'zhangsan@bupt.edu.cn',
                 address: '北京市海淀区西土城路10号北京邮电大学',
-                employeeId:'1234',
+                employeeId: '1234',
                 repoId: null,
                 repoAddr: null,
                 repoCoord: null
@@ -192,18 +206,18 @@
                 tel: '010-88888888',
                 email: 'lisi@bupt.edu.cn',
                 address: '北京市海淀区西土城路10号北京邮电大学',
-                employeeId:'1235',
+                employeeId: '1235',
                 repoId: '1234',
                 repoAddr: '北京市海淀区西土城路10号北京邮电大学教三楼233',
                 repoCoord: null
             };
 
-            item1.dialogVisible=false;
-            item2.dialogVisible=false;
+            item1.dialogVisible = false;
+            item2.dialogVisible = false;
 
             return {
-                loading:false,
-                initializing:true,
+                loading: false,
+                initializing: true,
                 results: [item1, item2],
                 queryParams: {
                     usertype: '',
@@ -212,7 +226,7 @@
                     IDNumber: '',
                     company: ''
                 },
-                editedForm:{
+                editedForm: {
                     username: '',
                     role: '',
                     realName: '',
@@ -224,34 +238,32 @@
                     tel: '',
                     email: '',
                     address: '',
-                    employeeId:''
+                    employeeId: ''
                 },
-                editRule:{
-
-                }
+                editRule: {}
             }
         },
-        mounted:function(){
+        mounted: function () {
             //从后端拉取数据
             $.ajax({
-                type:'get',
-                url:'http://10.112.128.63:8080/dispatch/user',
-                success:(data,result,resultDesp)=>{
+                type: 'get',
+                url: 'http://10.112.128.63:8080/dispatch/user',
+                success: (data, result, resultDesp) => {
                     if (result === 1000 || result === 'success') {
                         console.log(data);
                         console.log(result);
                         console.log(resultDesp);
-                        this.initializing=false;
+                        this.initializing = false;
                     } else {
                         this.$alert('数据拉取失败');
                     }
-                    this.initializing=false;
+                    this.initializing = false;
                 },
-                error:(result,resultDesp)=>{
+                error: (result, resultDesp) => {
                     console.log(result);
                     console.log(resultDesp);
                     this.$alert('数据拉取失败');
-                    this.initializing=false;
+                    this.initializing = false;
                 }
             });
         },
@@ -267,8 +279,8 @@
                         phoneNumber: this.queryParams.mobile,
                         employeeId: this.queryParams.staffId
                     },
-                    success: (data,result,resultDesp) => {
-                        for(var item in data){
+                    success: (data, result, resultDesp) => {
+                        for (var item in data) {
                             this.results.push(item);
                         }
                     },
@@ -277,37 +289,35 @@
                     }
                 })
             },
-            confirmEdition:function(formName){
-                this.$refs[formName].validate((valid)=>{
-                    if(valid){
-                        this.loading=true;
+            confirmEdition: function (formName) {
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        this.loading = true;
                         $.ajax({
                             type: 'post',
                             url: 'http://10.112.128.63:8080/dispatch/user/1/change',//TODO: set correct URL
-                            data: {
-
-                            },
+                            data: {},
                             success: (data, result, resultDesp) => {
                                 if (result === 1000 || result === 'success') {
                                     console.log(data);
                                     console.log(result);
                                     console.log(resultDesp);
                                     this.$alert('修改成功');
-                                    this.dialogVisible=false;
+                                    this.dialogVisible = false;
                                 } else {
                                     this.$alert('修改失败');
                                 }
-                                this.loading=false;
+                                this.loading = false;
                             },
                             error: (result, resultDesp) => {
                                 console.log(result);
                                 console.log(resultDesp);
                                 this.$alert('修改失败');
-                                this.loading=false;
+                                this.loading = false;
                                 return true;
                             }
                         })
-                    }else{
+                    } else {
                         this.$alert('信息错误，请重新填写');
                         return false;
                     }
