--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -5,6 +5,10 @@
     <title>登录</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
+        [v-cloak] {
+            display: none;
+        }
+
         body {
             background: url(res/bg-air.jpg) center top;
             background-size: 100%;
@@ -56,11 +60,10 @@
             position: relative;
             right: -50%;
         }
-
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <el-container>
         <el-header></el-header>
         <el-main>
